--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-imagemin": "^1.0.1",
     "gulp-inline-base64": "^0.1.4",
     "gulp-jshint": "^1.11.0",
+    "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^0.3.10",
     "gulp-rename": "^1.2.0",
     "gulp-rimraf": "^0.1.1",
@@ -19,6 +20,7 @@
     "gulp-svgstore": "^5.0.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.1",
+    "gulp-watch": "^4.2.4",
     "imagemin": "^3.1.0",
     "imagemin-jpegtran": "^4.2.0",
     "jshint-stylish": "^2.0.1",
