--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-base64": "^0.1.2",
     "gulp-concat": "^2.4.1",
     "gulp-copy": "0.0.2",
